--- a/typ-client/style.scss
+++ b/typ-client/style.scss
@@ -1,5 +1,3 @@
-body
-
 #container {
   position: relative;
   user-select: none;
@@ -25,6 +23,7 @@ body
     border: 1px solid black;
     padding: 0px;
     background: white;
+    z-index: 200;
     li {
       display: block;
       padding: 2px 6px;
@@ -48,11 +47,9 @@ body
     }
   }
   .piece {
-    /* TODO only for canvas spaces */
     position: absolute;
     left: 0;
     top: 0;
-    /* outline: 1px solid blue; */
     &.controlled {
       display: inline-block;
     }
@@ -68,9 +65,27 @@ body
   }
 }
 
+#zoomPiece {
+  position: absolute;
+  transform: scale(5);
+  pointer-events: none;
+  position: absolute;
+  top: 20%;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100px;
+  z-index: 1000;
+}
+
 .hideDragging {
   transition: 0.01s;
   transform: translateX(-9999px);
+}
+
+.react-draggable {
+  width: 0;
 }
 
 .react-draggable-dragging, .external-dragging {
@@ -78,3 +93,6 @@ body
   position: relative;
 }
 
+.counter {
+  white-space: nowrap;
+}
