--- a/isaac-four-souls/client/style.scss
+++ b/isaac-four-souls/client/style.scss
@@ -85,6 +85,15 @@
   color: red;
 }
 
+.die button {
+  width: 25px;
+  height: 25px;
+  background: #c00;
+  color: white;
+  border: none;
+  border-radius: 4px;
+}
+
 .card {
   width: 80px;
   height: 100px;
