coin counters and some client error guards

--- a/isaac-four-souls/client/style.scss
+++ b/isaac-four-souls/client/style.scss
@@ -104,3 +104,21 @@
     height: 100%;
   }
 }
+
+.coins {
+  color: white;
+  width: 25px;
+  display: inline-block;
+  font-size: 15px;
+  padding: 0px 2px;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  font-family: sans-serif;
+  img.penny {
+    width: 20px;
+    position: absolute;
+    z-index: -1;
+    left: 5px;
+  }
+}
