--- a/typ-client/style.scss
+++ b/typ-client/style.scss
@@ -1,5 +1,13 @@
-body {
-  font-family: "sans-serif";
+body, li {
+  font-family: sans-serif;
+}
+
+button {
+  border: none;
+  background: #017;
+  color: white;
+  border-radius: 2px;
+  margin: 0 2px;
 }
 
 #container {
@@ -112,4 +120,175 @@ body {
 #choiceFilter {
   margin-left: 10px;
   width: 100px;
+}
+
+.die button {
+  width: 25px;
+  height: 25px;
+  background: #c00;
+  color: white;
+  border: none;
+  border-radius: 4px;
+}
+
+.d6 {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  height: 2rem;
+  list-style-type: none;
+  transform-style: preserve-3d;
+  width: 2rem;
+  margin: 0;
+  padding: 0;
+  &[data-spin="up"] {
+    transition: transform 2s ease-out;
+  }
+  &[data-spin="down"] {
+    transition: transform 2s ease-out;
+  }
+  .die-face {
+    background-color: #eee;
+    box-shadow: inset -0.35rem 0.35rem 0.75rem rgba(0, 0, 0, 0.3),
+                inset 0.5rem -0.25rem 0.5rem rgba(0, 0, 0, 0.15);
+    display: grid;
+    grid-column: 1;
+    grid-row: 1;
+    grid-template-areas:
+      "one two three"
+      "four five six"
+      "sup eight nine";
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    height: 100%;
+    padding: .3rem;
+    width: 100%;
+    .dot {
+      align-self: center;
+      background-color: #333;
+      border-radius: 50%;
+      box-shadow: inset -0.05rem 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
+      display: block;
+      height: .4rem;
+      justify-self: center;
+      width: .4rem;
+    }
+    &[data-face="1"] {
+      transform: rotate3d(0, 0, 0, 90deg) translateZ(1.3rem);
+    }
+    &[data-face="2"] {
+      transform: rotate3d(-1, 0, 0, 90deg) translateZ(1.3rem);
+    }
+    &[data-face="3"] {
+      transform: rotate3d(0, 1, 0, 90deg) translateZ(1.3rem);
+    }
+    &[data-face="4"] {
+      transform: rotate3d(0, -1, 0, 90deg) translateZ(1.3rem);
+    }
+    &[data-face="5"] {
+      transform: rotate3d(1, 0, 0, 90deg) translateZ(1.3rem);
+    }
+    &[data-face="6"] {
+      transform: rotate3d(1, 0, 0, 180deg) translateZ(1.3rem);
+    }
+    &[data-face="1"] .dot:nth-of-type(1) {
+      grid-area: five;
+    }
+    &[data-face="2"] .dot:nth-of-type(1) {
+      grid-area: one;
+    }
+    &[data-face="2"] .dot:nth-of-type(2) {
+      grid-area: nine;
+    }
+    &[data-face="3"] .dot:nth-of-type(1) {
+      grid-area: one;
+    }
+    &[data-face="3"] .dot:nth-of-type(2) {
+      grid-area: five;
+    }
+    &[data-face="3"] .dot:nth-of-type(3) {
+      grid-area: nine;
+    }
+    &[data-face="4"] .dot:nth-of-type(1) {
+      grid-area: one;
+    }
+    &[data-face="4"] .dot:nth-of-type(2) {
+      grid-area: three;
+    }
+    &[data-face="4"] .dot:nth-of-type(3) {
+      grid-area: sup;
+    }
+    &[data-face="4"] .dot:nth-of-type(4) {
+      grid-area: nine;
+    }
+    &[data-face="5"] .dot:nth-of-type(1) {
+      grid-area: one;
+    }
+    &[data-face="5"] .dot:nth-of-type(2) {
+      grid-area: three;
+    }
+    &[data-face="5"] .dot:nth-of-type(3) {
+      grid-area: five;
+    }
+    &[data-face="5"] .dot:nth-of-type(4) {
+      grid-area: sup;
+    }
+    &[data-face="5"] .dot:nth-of-type(5) {
+      grid-area: nine;
+    }
+    &[data-face="6"] .dot:nth-of-type(1) {
+      grid-area: one;
+    }
+    &[data-face="6"] .dot:nth-of-type(2) {
+      grid-area: three;
+    }
+    &[data-face="6"] .dot:nth-of-type(3) {
+      grid-area: four;
+    }
+    &[data-face="6"] .dot:nth-of-type(4) {
+      grid-area: six;
+    }
+    &[data-face="6"] .dot:nth-of-type(5) {
+      grid-area: sup;
+    }
+    &[data-face="6"] .dot:nth-of-type(6) {
+      grid-area: nine;
+    }
+  }
+  [number="1"] &[data-spin="up"] {
+    transform: rotateX(360deg) rotateY(720deg) rotateZ(360deg);
+  }
+  [number="2"] &[data-spin="up"] {
+    transform: rotateX(450deg) rotateY(720deg) rotateZ(360deg);
+  }
+  [number="3"] &[data-spin="up"] {
+    transform: rotateX(360deg) rotateY(630deg) rotateZ(360deg);
+  }
+  [number="4"] &[data-spin="up"] {
+    transform: rotateX(360deg) rotateY(810deg) rotateZ(360deg);
+  }
+  [number="5"] &[data-spin="up"] {
+    transform: rotateX(270deg) rotateY(720deg) rotateZ(360deg);
+  }
+  [number="6"] &[data-spin="up"] {
+    transform: rotateX(360deg) rotateY(900deg) rotateZ(360deg);
+  }
+  [number="1"] &[data-spin="down"] {
+    transform: rotateX(-360deg) rotateY(-720deg) rotateZ(-360deg);
+  }
+  [number="2"] &[data-spin="down"] {
+    transform: rotateX(-270deg) rotateY(-720deg) rotateZ(-360deg);
+  }
+  [number="3"] &[data-spin="down"] {
+    transform: rotateX(-360deg) rotateY(-810deg) rotateZ(-360deg);
+  }
+  [number="4"] &[data-spin="down"] {
+    transform: rotateX(-360deg) rotateY(-630deg) rotateZ(-360deg);
+  }
+  [number="5"] &[data-spin="down"] {
+    transform: rotateX(-450deg) rotateY(-720deg) rotateZ(-360deg);
+  }
+  [number="6"] &[data-spin="down"] {
+    transform: rotateX(-360deg) rotateY(-900deg) rotateZ(-360deg);
+  }
 }
