--- a/typ-server/views/session.ejs
+++ b/typ-server/views/session.ejs
@@ -1,3 +1,4 @@
+<%- include('partials/header') %>
 <h1>Session</h1>
 
 <ul>
@@ -14,3 +15,4 @@
     <input type="submit" value="Join"/>
   </form>
 <% } %>
+<%- include('partials/footer') %>
