rename, clean up terminology

--- a/typ-server/views/partials/header.ejs
+++ b/typ-server/views/partials/header.ejs
@@ -34,7 +34,7 @@
 
   <body>
   	<div class="navbar">
-  		thankyoupartner
+      boardzilla
 
       <div class="login">
         <% if (user) { %>
