--- a/typ-server/views/session.ejs
+++ b/typ-server/views/session.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/header') %>
-<h1>Game of <%=session.Game.name %></h1>
+<h1>Game</h1>
 
 <ul>
   <% session.SessionUsers.forEach(sessionUser => { %>
