spread new items in free spaces, some fixes

--- a/isaac-four-souls/client/style.scss
+++ b/isaac-four-souls/client/style.scss
@@ -81,7 +81,7 @@ body {
     }
     #loot-discard {
       position: absolute;
-      left: 220px;
+      right: 220px;
       top: 170px;
     }
     #bonusSouls {
