--- a/isaac-four-souls/client/style.scss
+++ b/isaac-four-souls/client/style.scss
@@ -181,4 +181,10 @@ body {
       left: 5px;
     }
   }
+  div.nametag {
+    position: absolute;
+    top: 120px;
+    width: 100%;
+    text-align: center;
+  }
 }
