--- a/typ-client/style.scss
+++ b/typ-client/style.scss
@@ -74,6 +74,9 @@ button {
   .hilited {
     outline: 5px solid rgba(255,255,0,.5)
   }
+  div.nametag {
+    font-size: 30px;
+  }
 }
 
 #zoomPiece {
