--- a/typ-server/views/index.ejs
+++ b/typ-server/views/index.ejs
@@ -1,6 +1,7 @@
 <%- include('partials/header') %>
 
 <h1>Games</h1>
+<p><a href="?show=mine">Mine</a> | <a href="?show=all">All</a>
 <% if (sessions.length === 0) { %>
 <p>You currently have no games running.</p>
 <% } %>
@@ -8,10 +9,18 @@
 <ul>
  <% sessions.forEach(session => { %>
    <li>
-     <a href="/sessions/<%= session.id %>">
-       <%=session.gameId === -1 ? 'Local Game' : session.Game.name %>
-     </a>
-     <%=session.creator.name %> <%=session.lastState && session.lastState.phase %> <%=session.createdAt %>
+     <a href="/sessions/<%= session.id %>"><%=session.gameId === -1 ? localGame : session.Game.name %></a>
+     [
+     <%Object.entries(session.SessionUsers).forEach(([u, su]) => {%>
+       <%= u > 0 ? '|' : '' %>
+       <%if (su.User.name == session.creator.name) {%>
+         <b><%=su.User.name%></b>
+       <%} else {%>
+         <%=su.User.name%>
+       <%}%>
+     <%})%>
+     ]
+     <%=new Intl.DateTimeFormat().format(session.createdAt)%>
    </li>
  <% }) %>
 </ul>
