ping and player/connection status

--- a/typ-client/style.scss
+++ b/typ-client/style.scss
@@ -74,6 +74,11 @@ button {
   div.nametag {
     font-size: 30px;
     pointer-events: none;
+    opacity: .3;
+    color: black;
+    &.active {
+      opacity: 1;
+    }
   }
 }
 
