--- a/typ-client/style.scss
+++ b/typ-client/style.scss
@@ -9,6 +9,7 @@ button {
 
 #container {
   position: relative;
+  margin-top: 40px;
   user-select: none;
   -webkit-user-select: none;
   -moz-user-select: none;
