--- a/typ-client/style.scss
+++ b/typ-client/style.scss
@@ -40,11 +40,15 @@ button {
       margin: 2px;
       border-radius: 4px;
       text-align: left;
-      &#undo {
-        background-color: black;
+      background: #017;
+      &.undo {
+        background: black;
       }
-      &#reset {
-        background-color: #900;
+      &.reset {
+        background: #900;
+      }
+      &:hover {
+        background: #999;
       }
       .keybind {
         width: 20px;
@@ -192,7 +196,7 @@ button {
     transition: transform 1.5s ease-out;
   }
   .die-face {
-    background-color: #eee;
+    background: #eee;
     box-shadow: inset -0.1rem 0.1rem 0.25rem rgba(0, 0, 0, 0.3),
                 inset 0.03rem -0.08rem 0.15rem rgba(0, 0, 0, 0.15);
     display: grid;
