ability to specify after-move rules for board moves

--- a/typ-client/style.scss
+++ b/typ-client/style.scss
@@ -220,6 +220,7 @@ button {
     height: 100%;
     padding: .3rem;
     width: 100%;
+    outline: 1px solid #333;
     .dot {
       align-self: center;
       background-color: #333;
