--- a/typ-server/views/index.ejs
+++ b/typ-server/views/index.ejs
@@ -9,7 +9,7 @@
  <% sessions.forEach(session => { %>
    <li>
      <a href="/sessions/<%= session.id %>">
-       <%=session.gameId === -1 ? 'Local Game' : session.Game.name %>
+       <%=session.GameVersion.Game.name %>
      </a>
      <%=session.creator.name %> <%=session.lastState && session.lastState.phase %> <%=session.createdAt %>
    </li>
