--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -2,6 +2,16 @@
 
 <h1>Boardzilla</h1>
 
-<h2>Boardzilla is a framework for making and playing board games.</h1>
+<h2>Boardzilla is a framework for making and playing board games.</h2>
 
-<%- include('partials/footer') %>
+<p>Currently, we have implemented <a href="https://foursouls.com/">The Binding of Isaac: Four Souls</a> as our first game on the platform for testing and feature development.</p>
+
+<h2>How to play</h2>
+
+<ol>
+  <li><a href="/register">Create your account</a></li>
+  <li><a href="/sessions">Create a new game</a></li>
+  <li>Share your game URL with other player(s)</li>
+</ol>
+
+<p>Join us on <a href="https://discord.gg/hkvp9uPA" target="_new">Discord</a> to give feedback and suggestions!</p>
