all alt art and non-dupe cards like pills

--- a/game-core/client/style.scss
+++ b/game-core/client/style.scss
@@ -164,6 +164,9 @@ button {
 .react-draggable-dragging, .external-dragging {
   z-index: 100;
   position: relative;
+  img {
+    filter: drop-shadow(5px 5px 5px #222);
+  }
 }
 
 .counter {
