--- a/isaac-four-souls/client/style.scss
+++ b/isaac-four-souls/client/style.scss
@@ -1,7 +1,3 @@
-body {
-  min-width: 1400px;
-}
-
 .table {
   width: 980px;
   height: 540px;
@@ -21,20 +17,18 @@ body {
 }
 
 #container {
-  height: 800px;
-  width: 1000px;
-  [data-players="3"] &, [data-players="4"] & {
-    width: 1400px;
+  #layout {
+    width: 1000px;
+    [data-players="3"] &, [data-players="4"] & {
+      width: 1400px;
+    }
   }
   #board {
     position: absolute;
     left: 0;
     top: 290px;
     height: 220px;
-    width: 1000px;
-    [data-players="3"] &, [data-players="4"] & {
-      width: 1400px;
-    }
+    width: 100%;
     #characters {
       position: absolute;
       left: 320px;
