--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -30,6 +30,7 @@
         background-color: #aaf;
       }
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=0.4">
   </head>
 
   <body>
