--- a/isaac-four-souls/client/style.scss
+++ b/isaac-four-souls/client/style.scss
@@ -197,6 +197,7 @@
       transform: rotate(90deg);
     }
     img {
+      display: block;
       height: 100px;
       border-radius: 7px;
     }
