Add session error state

--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -15,3 +15,5 @@
 </ol>
 
 <p>Join us on <a href="https://discord.gg/hkvp9uPA" target="_new">Discord</a> to give feedback and suggestions!</p>
+
+<%- include('partials/footer') %>
