player colors in db

--- a/game-core/client/style.scss
+++ b/game-core/client/style.scss
@@ -155,7 +155,7 @@ button {
           [color="blue"] {
             color: #66f;
           }
-          [color="blue"] {
+          [color="purple"] {
             color: #c6f;
           }
         }
@@ -239,7 +239,7 @@ div.nametag {
     color: #009;
     text-shadow: 1px 1px #ccf;
   }
-  .player-mat[color="blue"] & {
+  .player-mat[color="purple"] & {
     color: #709;
     text-shadow: 1px 1px #dcf;
   }
