attempt to rewrite all element references to use uuids

--- a/isaac-four-souls/client/style.scss
+++ b/isaac-four-souls/client/style.scss
@@ -121,10 +121,10 @@
     &.mine {
       top: 510px;
     }
-    &:not(.mine):nth-child(2) {
+    &[player-after-me="2"] {
       left: 700px;
     }
-    &:not(.mine):nth-child(3) {
+    &[player-after-me="3"] {
       left: 700px;
       top: 510px;
     }
