handle hidden elements

--- a/isaac-four-souls/client/style.scss
+++ b/isaac-four-souls/client/style.scss
@@ -177,6 +177,7 @@
   .card {
     width: 73.33px;
     height: 100px;
+    transition: transform .2s;
     &[active=true] {
       transform: rotate(90deg);
     }
