--- a/isaac-four-souls/client/style.scss
+++ b/isaac-four-souls/client/style.scss
@@ -28,7 +28,7 @@
     left: 0;
     top: 290px;
     height: 220px;
-    width: 100%;
+    width: 1000px;
     #characters {
       position: absolute;
       left: 320px;
